# CryptoAgent

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
artifacts/: final_lgbm_model.pkl  final_lgbm_model_features.pkl
data/: picks_history.db
data/raw/1d/: BNB-USD_1y_1d.csv  BNB-USD_5d_1d.csv  BNB-USD_90d_1d.csv  BTC-USD_1y_1d.csv  BTC-USD_5d_1d.csv  BTC-USD_90d_1d.csv  ETH-USD_1y_1d.csv  ETH-USD_90d_1d.csv  SOL-USD_1y_1d.csv  USDT-USD_1y_1d.csv  XRP-USD_1y_1d.csv  XRP-USD_90d_1d.csv  ZEC-USD_1y_1d.csv
data/raw/1h/: BNB-USD_60d_1h.csv  BNB-USD_90d_1h.csv  BTC-USD_60d_1h.csv  BTC-USD_90d_1h.csv  ETH-USD_60d_1h.csv  ETH-USD_90d_1h.csv  SOL-USD_60d_1h.csv  USDT-USD_60d_1h.csv  XRP-USD_60d_1h.csv  XRP-USD_90d_1h.csv  ZEC-USD_60d_1h.csv
data/raw/1wk/: BNB-USD_1y_1wk.csv  BNB-USD_90d_1wk.csv  BTC-USD_1y_1wk.csv  BTC-USD_90d_1wk.csv  ETH-USD_1y_1wk.csv  ETH-USD_90d_1wk.csv  SOL-USD_1y_1wk.csv  USDT-USD_1y_1wk.csv  XRP-USD_1y_1wk.csv  XRP-USD_90d_1wk.csv  ZEC-USD_1y_1wk.csv
src/: main.py  scheduler.py  train_model.py
src/agents/: crypto_agent.py  news_agent.py  telegram_agent.py
src/utils/: data_loader.py  db_manager.py  feature_engineering.py  model_trainer.py
